PasswordManager should update all PasswordFormManagers.

Now if the new parsing is on PasswordManager doesn't update
PasswordFormManagers. That's wrong since they are used for saving and
for comparing with NewPasswordFormManagers. This CL fixes that.

Bug: 906253, 831123
Change-Id: I35e16993126699d86e89e2ab6519b7be335f3e04
Reviewed-on: https://chromium-review.googlesource.com/c/1341990
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609359}
Former-commit-id: 52aaea792f67d5944c6dc822ae7e062cad957281